@@ -32,7 +32,7 @@
 package com.jme3.asset;
 
 import com.jme3.asset.cache.AssetCache;
-
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -53,26 +53,26 @@ final class ImplHandler {
     private static final Logger logger = Logger.getLogger(ImplHandler.class.getName());
 
     private final AssetManager assetManager;
-    
-    private final ThreadLocal<AssetKey> parentAssetKey 
+
+    private final ThreadLocal<AssetKey> parentAssetKey
             = new ThreadLocal<>();
-    
+
     private final CopyOnWriteArrayList<ImplThreadLocal<AssetLocator>> locatorsList =
-                new CopyOnWriteArrayList<>();
-    
-    private final HashMap<Class<?>, ImplThreadLocal<AssetLoader>> classToLoaderMap = 
-                new HashMap<>();
+            new CopyOnWriteArrayList<>();
+
+    private final HashMap<Class<?>, ImplThreadLocal<AssetLoader>> classToLoaderMap =
+            new HashMap<>();
 
     private final ConcurrentHashMap<String, ImplThreadLocal<AssetLoader>> extensionToLoaderMap =
-                new ConcurrentHashMap<>();
-    
-    private final ConcurrentHashMap<Class<? extends AssetProcessor>, AssetProcessor> classToProcMap =
-                new ConcurrentHashMap<>();
-    
-    private final ConcurrentHashMap<Class<? extends AssetCache>, AssetCache> classToCacheMap =
-                new ConcurrentHashMap<>();
+            new ConcurrentHashMap<>();
 
-    public ImplHandler(AssetManager assetManager){
+    private final ConcurrentHashMap<Class<? extends AssetProcessor>, AssetProcessor> classToProcMap =
+            new ConcurrentHashMap<>();
+
+    private final ConcurrentHashMap<Class<? extends AssetCache>, AssetCache> classToCacheMap =
+            new ConcurrentHashMap<>();
+
+    public ImplHandler(AssetManager assetManager) {
         this.assetManager = assetManager;
     }
 
@@ -82,48 +82,51 @@ final class ImplHandler {
         private final String path;
         private final String[] extensions;
 
-        public ImplThreadLocal(Class<T> type, String[] extensions){
+        public ImplThreadLocal(Class<T> type, String[] extensions) {
             this.type = type;
             this.extensions = extensions.clone();
             this.path = null;
         }
 
-        public ImplThreadLocal(Class<T> type, String path){
+        public ImplThreadLocal(Class<T> type, String path) {
             this.type = type;
             this.path = path;
             this.extensions = null;
         }
 
-        public ImplThreadLocal(Class<T> type){
+        public ImplThreadLocal(Class<T> type) {
             this.type = type;
             this.path = null;
             this.extensions = null;
         }
-        
+
         public String getPath() {
             return path;
         }
-        
-        public String[] getExtensions(){
+
+        public String[] getExtensions() {
             return extensions;
         }
-        
-        public Class<?> getTypeClass(){
+
+        public Class<?> getTypeClass() {
             return type;
         }
 
         @Override
-        protected T initialValue(){
+        protected T initialValue() {
             try {
-                T obj = type.newInstance();
+                T obj = type.getDeclaredConstructor().newInstance();
+
                 if (path != null) {
-                    ((AssetLocator)obj).setRootPath(path);
+                    ((AssetLocator) obj).setRootPath(path);
                 }
                 return obj;
-            } catch (InstantiationException | IllegalAccessException ex) {
-                logger.log(Level.SEVERE,"Cannot create locator of type {0}, does"
-                            + " the class have an empty and publicly accessible"+
-                              " constructor?", type.getName());
+            } catch (InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException ex) {
+                logger.log(Level.SEVERE, "Cannot create locator of type {0}, does"
+                        + " the class have an empty and publicly accessible"
+                        + " constructor?", type.getName());
                 logger.throwing(type.getName(), "<init>", ex);
             }
             return null;
@@ -135,51 +138,51 @@ final class ImplHandler {
      * that have failed to load. When set, the {@link DesktopAssetManager}
      * gets a hint that it should suppress {@link AssetNotFoundException}s
      * and instead call the listener callback (if set).
-     * 
-     * @param parentKey The parent key  
+     *
+     * @param parentKey The parent key
      */
-    public void establishParentKey(AssetKey parentKey){
-        if (parentAssetKey.get() == null){
+    public void establishParentKey(AssetKey parentKey) {
+        if (parentAssetKey.get() == null) {
             parentAssetKey.set(parentKey);
         }
     }
-    
-    public void releaseParentKey(AssetKey parentKey){
-        if (parentAssetKey.get() == parentKey){
+
+    public void releaseParentKey(AssetKey parentKey) {
+        if (parentAssetKey.get() == parentKey) {
             parentAssetKey.set(null);
         }
     }
-    
-    public AssetKey getParentKey(){
+
+    public AssetKey getParentKey() {
         return parentAssetKey.get();
     }
-    
+
     /**
      * Attempts to locate the given resource name.
      * @param key The full name of the resource.
      * @return The AssetInfo containing resource information required for
      * access, or null if not found.
      */
-    public AssetInfo tryLocate(AssetKey key){
-        if (locatorsList.isEmpty()){
-            logger.warning("There are no locators currently"+
-                            " registered. Use AssetManager."+
-                            "registerLocator() to register a"+
-                            " locator.");
+    public AssetInfo tryLocate(AssetKey key) {
+        if (locatorsList.isEmpty()) {
+            logger.warning("There are no locators currently"
+                    + " registered. Use AssetManager."
+                    + "registerLocator() to register a"
+                    + " locator.");
             return null;
         }
-        
-        for (ImplThreadLocal<AssetLocator> local : locatorsList){
+
+        for (ImplThreadLocal<AssetLocator> local : locatorsList) {
             AssetInfo info = local.get().locate(assetManager, key);
             if (info != null) {
                 return info;
             }
         }
-        
+
         return null;
     }
 
-    public int getLocatorCount(){
+    public int getLocatorCount() {
         return locatorsList.size();
     }
 
@@ -188,44 +191,44 @@ final class ImplHandler {
      * of the current thread.
      * @return AssetLoader registered with addLoader.
      */
-    public AssetLoader aquireLoader(AssetKey key){
+    public AssetLoader aquireLoader(AssetKey key) {
         // No need to synchronize() against map, its concurrent
         ImplThreadLocal local = extensionToLoaderMap.get(key.getExtension());
-        if (local == null){
-            throw new AssetLoadException("No loader registered for type \"" +
-                                         key.getExtension() + "\"");
+        if (local == null) {
+            throw new AssetLoadException("No loader registered for type \""
+                    + key.getExtension() + "\"");
 
         }
         return (AssetLoader) local.get();
     }
-    
-    public void clearCache(){
+
+    public void clearCache() {
         // The iterator over the values collection is thread-safe.
         synchronized (classToCacheMap) {
-            for (AssetCache cache : classToCacheMap.values()){
+            for (AssetCache cache : classToCacheMap.values()) {
                 cache.clearCache();
             }
         }
     }
-    
+
     @SuppressWarnings("unchecked")
     public <T extends AssetCache> T getCache(Class<T> cacheClass) {
         if (cacheClass == null) {
             return null;
         }
-        
+
         T cache = (T) classToCacheMap.get(cacheClass);
         if (cache == null) {
             synchronized (classToCacheMap) {
                 cache = (T) classToCacheMap.get(cacheClass);
                 if (cache == null) {
                     try {
-                        cache = cacheClass.newInstance();
+                        cache = cacheClass.getDeclaredConstructor().newInstance();
                         classToCacheMap.put(cacheClass, cache);
-                    } catch (InstantiationException ex) {
+                    } catch (InstantiationException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException ex) {
                         throw new IllegalArgumentException("The cache class cannot"
                                 + " be created, ensure it has empty constructor", ex);
-                    } catch (IllegalAccessException ex) {
+                    } catch (IllegalAccessException | SecurityException ex) {
                         throw new IllegalArgumentException("The cache class cannot "
                                 + "be accessed", ex);
                     }
@@ -234,24 +237,24 @@ final class ImplHandler {
         }
         return cache;
     }
-    
+
     @SuppressWarnings("unchecked")
-    public <T extends AssetProcessor> T getProcessor(Class<T> procClass){
+    public <T extends AssetProcessor> T getProcessor(Class<T> procClass) {
         if (procClass == null)
             return null;
-        
+
         T proc = (T) classToProcMap.get(procClass);
-        if (proc == null){
-            synchronized(classToProcMap){
+        if (proc == null) {
+            synchronized (classToProcMap) {
                 proc = (T) classToProcMap.get(procClass);
                 if (proc == null) {
                     try {
-                        proc = procClass.newInstance();
+                        proc = procClass.getDeclaredConstructor().newInstance();
                         classToProcMap.put(procClass, proc);
-                    } catch (InstantiationException ex) {
+                    } catch (InstantiationException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException ex) {
                         throw new IllegalArgumentException("The processor class cannot"
                                 + " be created, ensure it has empty constructor", ex);
-                    } catch (IllegalAccessException ex) {
+                    } catch (IllegalAccessException | SecurityException ex) {
                         throw new IllegalArgumentException("The processor class cannot "
                                 + "be accessed", ex);
                     }
@@ -260,55 +263,55 @@ final class ImplHandler {
         }
         return proc;
     }
-    
+
     @SuppressWarnings("unchecked")
-    public void addLoader(final Class<? extends AssetLoader> loaderType, String ... extensions){
+    public void addLoader(final Class<? extends AssetLoader> loaderType, String ... extensions) {
         // Synchronized access must be used for any ops on classToLoaderMap
         ImplThreadLocal local = new ImplThreadLocal(loaderType, extensions);
-        for (String extension : extensions){
+        for (String extension : extensions) {
             extension = extension.toLowerCase();
-            synchronized (classToLoaderMap){
+            synchronized (classToLoaderMap) {
                 classToLoaderMap.put(loaderType, local);
                 extensionToLoaderMap.put(extension, local);
             }
         }
     }
 
-    public void removeLoader(final Class<? extends AssetLoader> loaderType){
+    public void removeLoader(final Class<? extends AssetLoader> loaderType) {
         // Synchronized access must be used for any ops on classToLoaderMap
         // Find the loader ImplThreadLocal for this class
-        synchronized (classToLoaderMap){
+        synchronized (classToLoaderMap) {
             // Remove it from the class->loader map
             ImplThreadLocal local = classToLoaderMap.remove(loaderType);
-            if (local == null) return;
+            if (local == null)
+                return;
             // Remove it from the extension->loader map
-            for (String extension : local.getExtensions()){
+            for (String extension : local.getExtensions()) {
                 extensionToLoaderMap.remove(extension);
             }
         }
     }
-    
+
     @SuppressWarnings("unchecked")
-    public void addLocator(final Class<? extends AssetLocator> locatorType, String rootPath){
+    public void addLocator(final Class<? extends AssetLocator> locatorType, String rootPath) {
         locatorsList.add(new ImplThreadLocal(locatorType, rootPath));
     }
 
-    public void removeLocator(final Class<? extends AssetLocator> locatorType, String rootPath){
+    public void removeLocator(final Class<? extends AssetLocator> locatorType, String rootPath) {
         ArrayList<ImplThreadLocal<AssetLocator>> locatorsToRemove = new ArrayList<>();
         Iterator<ImplThreadLocal<AssetLocator>> it = locatorsList.iterator();
-       
-        while (it.hasNext()){
+
+        while (it.hasNext()) {
             ImplThreadLocal<AssetLocator> locator = it.next();
-            if (locator.getPath().equals(rootPath) &&
-                locator.getTypeClass().equals(locatorType)){
+            if (locator.getPath().equals(rootPath)
+                    && locator.getTypeClass().equals(locatorType)) {
                 //it.remove();
                 // copy on write list doesn't support iterator remove,
                 // must use temporary list
                 locatorsToRemove.add(locator);
             }
         }
-        
+
         locatorsList.removeAll(locatorsToRemove);
     }
-
 }
